main/default/objects/pharos__Log_Index__c/fields/pharos__Bug_Tracker__c.field-meta.xml
<CustomField>
    <fullName>pharos__Bug_Tracker__c</fullName>
    <label>Bug_Tracker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>