main/default/objects/pharos__Log_Index__c/fields/pharos__CV_Reported_to_Pharos_On__c.field-meta.xml
<CustomField>
    <fullName>pharos__CV_Reported_to_Pharos_On__c</fullName>
    <label>CV Reported to Pharos On</label>
    <type>DateTime</type>
</CustomField>