main/default/objects/pharos__Log_Index__c/fields/pharos__First_Occurred_On__c.field-meta.xml
<CustomField>
    <fullName>pharos__First_Occurred_On__c</fullName>
    <label>First Occurred On</label>
    <type>DateTime</type>
</CustomField>