main/default/objects/pharos__Log_Index__c/fields/pharos__Hash__c.field-meta.xml
<CustomField>
    <fullName>pharos__Hash__c</fullName>
    <label>Hash</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>