main/default/objects/pharos__Log_Index__c/fields/pharos__Internal__c.field-meta.xml
<CustomField>
    <fullName>pharos__Internal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal</label>
    <type>Checkbox</type>
</CustomField>