main/default/objects/pharos__Log_Index__c/fields/pharos__Key__c.field-meta.xml
<CustomField>
    <fullName>pharos__Key__c</fullName>
    <externalId>true</externalId>
    <label>Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>