main/default/objects/pharos__Log_Index__c/fields/pharos__Organization_Id__c.field-meta.xml
<CustomField>
    <fullName>pharos__Organization_Id__c</fullName>
    <label>Organization Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>