main/default/objects/pharos__Log_Index__c/fields/pharos__Resolved_On__c.field-meta.xml
<CustomField>
    <fullName>pharos__Resolved_On__c</fullName>
    <label>Resolved On</label>
    <type>DateTime</type>
</CustomField>