main/default/objects/pharos__Log_Index__c/fields/pharos__Type__c.field-meta.xml
<CustomField>
    <fullName>pharos__Type__c</fullName>
    <label>Type</label>
    <length>1</length>
    <required>true</required>
    <type>Text</type>
</CustomField>